fix(property): update property item  align-items is baseline #INFR-4285

--- a/src/property/styles/properties.scss
+++ b/src/property/styles/properties.scss
@@ -6,11 +6,12 @@
     &.thy-properties-horizontal {
         .thy-properties-item-container {
             width: 100%;
-            min-height: variables.$property-item-min-height;
             display: flex;
-            align-items: center;
+            align-items: baseline;
 
             .thy-properties-item-label {
+                min-height: variables.$property-item-min-height;
+                line-height: variables.$property-item-min-height;
                 width: 25%;
             }
 
